--- a/client/styles.css
+++ b/client/styles.css
@@ -31,7 +31,11 @@
     border-bottom: 3px solid black;
 }
 
-#board td {
+#board td div {
+    width: 36px;
+    height: 36px;
+    margin: 2px;
+    line-height: 36px;
     color: black;
     font-size: 24pt;
     font-family: Courier New, Courier, monospace;
@@ -39,7 +43,7 @@
     text-align: center;
 }
 
-#board td .initialValue {
+#board td div.initialValue {
     color: red;
 }
 
