--- a/client/styles.css
+++ b/client/styles.css
@@ -2,6 +2,12 @@
     margin-top: 20px;
 }
 
+#wrapper {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #board td {
     width: 40px;
     height: 40px;
